--- a/events.html
+++ b/events.html
@@ -5,28 +5,23 @@
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <title>Whendle — Events (Eventle)</title>
 <style>
-  :root { --bg:#0f1115; --card:#151923; --text:#e8ecf1; --muted:#9aa3b2; --green:#22c55e; --amber:#f59e0b; --red:#ef4444; }
-  *{box-sizing:border-box}
-  body{margin:0;font-family:system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial;background:radial-gradient(1200px 900px at 20% -10%,#1b2130 0%,var(--bg) 60%);color:var(--text);display:grid;place-items:start center;min-height:100vh;padding:16px}
-  .container{width:min(860px,100%)}
-  header{display:flex;align-items:center;justify-content:space-between;gap:12px;margin-bottom:12px;flex-wrap:wrap}
+  :root { --bg:#0f1115; --card:#151923; --text:#e8ecf1; --muted:#9aa3b2; --accent:#60a5fa; --green:#22c55e; --amber:#f59e0b; --red:#ef4444; }
+  *{box-sizing:border-box} body{margin:0;font-family:system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial;background:radial-gradient(1200px 900px at 20% -10%,#1b2130 0%,var(--bg) 60%);color:var(--text);display:grid;place-items:start center;min-height:100vh;padding:16px}
+  .container{width:min(860px,100%)} header{display:flex;align-items:center;justify-content:space-between;gap:12px;margin-bottom:12px;flex-wrap:wrap}
   nav a{color:var(--text);text-decoration:none;padding:6px 10px;border-radius:10px;border:1px solid #1f2634;background:#0f1420}
   nav a.active{border-color:#2563eb;color:#93c5fd}
   .card{background:linear-gradient(180deg,#1a2231,var(--card));border:1px solid #1f2634;border-radius:16px;padding:16px;box-shadow:0 10px 30px rgba(0,0,0,.35)}
-  .row{display:flex;gap:16px;align-items:flex-start;flex-wrap:wrap}
-  .col{display:grid;gap:8px;flex:1 1 300px}
+  .row{display:flex;gap:16px;align-items:flex-start;flex-wrap:wrap}.col{display:grid;gap:8px;flex:1 1 300px}.muted{color:var(--muted)}
   img.portrait{width:100%;border-radius:12px;border:1px solid #263043;object-fit:cover;aspect-ratio:16/10;object-position:50% 18%;background:#0c0e14}
-  .muted{color:var(--muted)}
-  h2.title{margin:4px 0 2px 0;font-size:1.35rem}
-  .rules{margin:0;padding-left:18px}.rules li{margin:2px 0}
   input[type=text]{background:#0f1420;color:var(--text);border:1px solid #263043;padding:10px 12px;border-radius:10px;width:120px;font-size:1.1rem;letter-spacing:1px}
   button{background:linear-gradient(180deg,#3b82f6,#2563eb);border:1px solid #1e40af;color:white;padding:10px 14px;border-radius:10px;font-weight:600;cursor:pointer}
   button.secondary{background:#0f1420;border:1px solid #263043;color:var(--text)}
   .lamps{display:flex;gap:12px;font-weight:700}.lamp{display:inline-flex;align-items:center;gap:6px;padding:8px 10px;border-radius:10px}
   .lamp.green{background:rgba(34,197,94,.1);border:1px solid rgba(34,197,94,.35)}.lamp.amber{background:rgba(245,158,11,.1);border:1px solid rgba(245,158,11,.35)}.lamp.red{background:rgba(239,68,68,.1);border:1px solid rgba(239,68,68,.35)}
-  .grid{display:grid;gap:8px;margin-top:12px}
-  .guess-row{display:grid;align-items:center;gap:10px;padding:10px;grid-template-columns:auto 1fr auto;border:1px solid #20283a;border-radius:12px;background:#0e1320}
+  .grid{display:grid;gap:8px;margin-top:12px}.guess-row{display:grid;align-items:center;gap:10px;padding:10px;grid-template-columns:auto 1fr auto;border:1px solid #20283a;border-radius:12px;background:#0e1320}
   .year{font-weight:800;letter-spacing:1px}.hint{min-width:120px;text-align:left;color:var(--muted);font-size:.9rem}.status{margin-top:10px;font-weight:700}.success{color:var(--green)}.error{color:var(--red)}
+  h2.title{margin:4px 0 2px 0;font-size:1.35rem}
+  .rules{margin:0;padding-left:18px}.rules li{margin:2px 0}
 </style>
 </head>
 <body>
@@ -42,19 +37,22 @@
   <div class="card">
     <div class="row">
       <div class="col">
-        <img class="portrait" id="portrait" alt="" src="">
+        <img class="portrait" id="portrait" alt="" src="" referrerpolicy="no-referrer" crossorigin="anonymous">
       </div>
       <div class="col">
         <h2 id="title" class="title">Event Name</h2>
         <ul class="rules muted">
-          <li>Guess the <strong>4‑digit event year</strong>. </li>
+          <li>Guess the <strong>4-digit year</strong>.</li>
           <li>You get <strong>6 tries</strong>.</li>
-          <li>Lamps show counts only: <br>🟩 right number, right place</br><br>🟨 right number wrong place</br><br>🟥 wrong number</br></li>
-          <li><em>Warmer</em>🔥<em>/Cooler</em>🧊 hints compare to your previous guess (ties show “No change ◼︎)”.</li>
+          <li>Coloured lamps show digit count:</li>
+          <li>🟩 right number, right place</li>
+          <li>🟨 right number, wrong place</li>
+          <li>🟥 wrong number</li>
+          <li><em>Warmer</em>🔥 / <em>Cooler</em>🧊 compares to your previous guess (ties show “No change ◼︎”).</li>
         </ul>
         <div class="controls" style="margin-top:8px;">
           <label class="muted" for="mode">Mode</label>
-          <select id="mode"><option>Daily</option><option>Random</option></select>
+          <select id="mode"><option>Daily</option><option>Practice</option></select>
           <label><input type="checkbox" id="hintToggle" checked> Warmer/Cooler</label>
           <input id="yearInput" type="text" inputmode="numeric" pattern="\\d{4}" placeholder="e.g. 1989" maxlength="4">
           <button id="submitBtn">Submit guess</button>
@@ -73,8 +71,6 @@
 </div>
 
 <script>
-const PLACEHOLDER='data:image/svg+xml;utf8,'+encodeURIComponent(`<svg xmlns="http://www.w3.org/2000/svg" width="1200" height="800"><defs><linearGradient id="g" x1="0" x2="1" y1="0" y2="1"><stop offset="0%" stop-color="#1a2231"/><stop offset="100%" stop-color="#0e1320"/></linearGradient></defs><rect width="100%" height="100%" fill="url(#g)"/><text x="50%" y="50%" dominant-baseline="middle" text-anchor="middle" fill="#9aa3b2" font-family="Arial" font-size="42">Image unavailable</text></svg>`);
-
 const EVENTS=[
  {name:"Fall of the Berlin Wall",year:1989,img:"https://upload.wikimedia.org/wikipedia/commons/3/3f/Berlin_Wall_Brandenburger_Tor.jpg",summary:"The Berlin Wall fell in 1989, leading to German reunification and symbolizing the end of the Cold War."},
  {name:"First Moon Landing (Apollo 11)",year:1969,img:"https://upload.wikimedia.org/wikipedia/commons/a/a1/Aldrin_Apollo_11.jpg",summary:"Apollo 11 landed on the Moon in 1969; Neil Armstrong and Buzz Aldrin walked on the lunar surface."},
@@ -97,23 +93,37 @@ function pad4(n){return n.toString().padStart(4,"0");}
 function score(a,g){const m=[0,1,2,3].map(i=>a[i]===g[i]);const greens=m.filter(Boolean).length;const ra={},rg={};for(let i=0;i<4;i++){if(!m[i]){ra[a[i]]=(ra[a[i]]||0)+1;rg[g[i]]=(rg[g[i]]||0)+1}}let amb=0;for(const d in rg){amb+=Math.min(rg[d]||0,ra[d]||0)}const red=4-greens-amb;return{green:greens,amber:amb,red:red}}
 function lampHTML(r){return`<div class="lamps"><span class="lamp green">🟩 ${r.green}</span><span class="lamp amber">🟨 ${r.amber}</span><span class="lamp red">🟥 ${r.red}</span></div>`}
 function temperatureHint(ans,prev,nw){const pa=Math.abs(ans-prev),ca=Math.abs(ans-nw);if(ca<pa)return"Warmer 🔥";if(ca>pa)return"Cooler 🧊";return"No change ◼︎"}
-function todayIndex(){const d=new Date();const seed=Number(`${d.getFullYear()}${String(d.getMonth()+1).padStart(2,"0")}${String(d.getDate()).padStart(2,"0")}`);return seed%EVENTS.length}
+function todaySeedNumber(){const d=new Date();return Number(`${d.getFullYear()}${String(d.getMonth()+1).padStart(2,"0")}${String(d.getDate()).padStart(2,"0")}`);}
+function todayIndex(){return todaySeedNumber()%EVENTS.length}
+
+// practice pool excluding today
+function rng(seed){let x=seed|0;return()=>{x^=x<<13;x^=x>>>17;x^=x<<5;return((x>>>0)/4294967296)}}
+function practicePool(count=14){
+  const today=todayIndex();
+  const d=new Date(); const monthSeed=Number(`${d.getFullYear()}${String(d.getMonth()+1).padStart(2,"0")}`);
+  const rand=rng(monthSeed);
+  const indices=[...Array(EVENTS.length).keys()].filter(i=>i!==today);
+  indices.sort(()=>rand()-0.5);
+  return indices.slice(0, Math.min(count, indices.length));
+}
+
 let state={mode:"Daily",item:null,answer:"",guesses:[],results:[],over:false,win:false};
 
-function setImageWithFallback(el,src,alt){el.onerror=()=>{el.src=PLACEHOLDER;};el.alt=alt||"";el.src=src;}
+function setImageWithFallback(el,src,alt){
+  el.onerror=()=>{el.style.objectFit='contain';el.style.background='#0e1320';};
+  el.alt=alt||""; el.src=src;
+}
+
 function pickEvent(mode){
-  const idx=(mode==="Daily")?todayIndex():Math.floor(Math.random()*EVENTS.length);
+  let idx;
+  if (mode==="Daily"){ idx=todayIndex(); }
+  else { const pool=practicePool(14); idx=pool[Math.floor(Math.random()*pool.length)]; }
   const p=EVENTS[idx];
-  state.item=p;
-  state.answer=pad4(p.year);
-  state.guesses=[]; state.results=[]; state.over=false; state.win=false;
+  state.item=p; state.answer=pad4(p.year); state.guesses=[]; state.results=[]; state.over=false; state.win=false;
   setImageWithFallback(document.getElementById("portrait"),p.img,p.name);
-  document.getElementById("title").textContent=p.name;
-  document.getElementById("history").innerHTML="";
-  document.getElementById("status").textContent="";
-  document.getElementById("reveal").style.display="none";
-  document.getElementById("summary").textContent="";
-  document.title=`Whendle — Events (${p.name})`;
+  document.getElementById("history").innerHTML=""; document.getElementById("status").textContent="";
+  document.getElementById("reveal").style.display="none"; document.getElementById("summary").textContent="";
+  document.getElementById("title").textContent=p.name; document.title=`Whendle — Events (${p.name})`;
 }
 
 async function fetchSummary(name,fallback){
@@ -133,101 +143,63 @@ async function finishRound(){
   const s=document.getElementById("status");
   if(state.win){ s.className="status success"; s.textContent=`Correct! “${state.item.name}” occurred in ${state.answer}.`; }
   else{ s.className="status error"; s.textContent=`Out of tries! The correct year was ${state.answer}.`; }
-  const rev=document.getElementById("reveal");
-  const sum=document.getElementById("summary");
-  const t=await fetchSummary(state.item.name,state.item.summary);
-  sum.textContent=t||"(No summary available.)";
-  rev.style.display="block";
-  // After you set s.textContent = "Correct!" or "Out of tries!" inside finishRound:
 
-const boardLink = document.createElement("a");
-boardLink.href = `/leaderboard.html?type=events`;   // or ?type=events on the Events page
-boardLink.textContent = "See where you placed →";
-boardLink.style.display = "inline-block";
-boardLink.style.marginTop = "8px";
-boardLink.style.color = "#60a5fa";
-boardLink.style.fontWeight = "600";
-s.appendChild(document.createElement("br"));
-s.appendChild(boardLink);
+  const boardLink=document.createElement("a");
+  boardLink.href="/leaderboard.html?type=events";
+  boardLink.textContent="See where you placed →";
+  boardLink.style.display="inline-block"; boardLink.style.marginTop="8px"; boardLink.style.color="#60a5fa"; boardLink.style.fontWeight="600";
+  s.appendChild(document.createElement("br")); s.appendChild(boardLink);
 
+  const rev=document.getElementById("reveal"); const sum=document.getElementById("summary");
+  const t=await fetchSummary(state.item.name,state.item.summary); sum.textContent=t||"(No summary available.)"; rev.style.display="block";
+
+  // === Record to Supabase ===
+  try{
+    const seedNum=todaySeedNumber(); const seed=`${seedNum}|events`;
+    const runMode=document.getElementById('mode').value==='Daily'?'daily':'practice';
+    if (window.onRoundFinished) {
+      await window.onRoundFinished({
+        gameType:'events', runMode, seed,
+        entityName: state.item.name, win: state.win, tries: state.guesses.length,
+        msElapsed: null, results: state.results
+      });
+    }
+  }catch(e){ console.warn("recordGame failed (non-fatal)", e); }
 }
 
 function submitGuess(){
   if(state.over)return;
-  const inp=document.getElementById("yearInput");
-  const v=(inp.value||"").trim();
+  const inp=document.getElementById("yearInput"); const v=(inp.value||"").trim();
   const s=document.getElementById("status");
   if(!/^\d{4}$/.test(v)){ s.className="status"; s.textContent="Please enter exactly 4 digits (e.g., 1989)."; return; }
-  let hint="";
-  if(document.getElementById("hintToggle").checked && state.guesses.length>0){
+  let hint=""; if(document.getElementById("hintToggle").checked && state.guesses.length>0){
     hint=temperatureHint(Number(state.answer),Number(state.guesses[state.guesses.length-1]),Number(v));
   }
-  const res=score(state.answer,v);
-  state.guesses.push(v); state.results.push(res);
-  addHistoryRow(v,res,hint);
-  inp.value="";
+  const res=score(state.answer,v); state.guesses.push(v); state.results.push(res); addHistoryRow(v,res,hint); inp.value="";
   if(res.green===4){ state.over=true; state.win=true; finishRound(); }
   else if(state.guesses.length>=6){ state.over=true; state.win=false; finishRound(); }
 }
 
 document.getElementById("submitBtn").addEventListener("click",submitGuess);
-document.getElementById("yearInput").addEventListener("keydown",e=>{ if(e.key==="Enter") submitGuess(); });
-document.getElementById("newRound").addEventListener("click",()=>{ pickEvent(document.getElementById("mode").value); });
-document.getElementById("mode").addEventListener("change",e=>{ pickEvent(e.target.value); });
+document.getElementById("yearInput").addEventListener("keydown",e=>{if(e.key==="Enter")submitGuess()});
+document.getElementById("newRound").addEventListener("click",()=>{pickEvent(document.getElementById("mode").value)});
+document.getElementById("mode").addEventListener("change",e=>{pickEvent(e.target.value)});
 pickEvent(state.mode);
 </script>
 
+<!-- Supabase hook block -->
 <script type="module">
-  import { supabase, getDeviceId, fetchCountry, ensureUser, recordGame, buildShare } from "/js/db.js";
+  import { getDeviceId, fetchCountry, ensureUser, recordGame, buildShare } from "/js/db.js";
 
-  // 1) Identify device + capture country (optional)
   const deviceId = getDeviceId();
-  const country = await fetchCountry();       // requires /api/country (step 5)
+  const country = await fetchCountry();
   const userId = await ensureUser(deviceId, country);
 
-  // 2) Define a helper you call when the round ends
-  async function onRoundFinished({ gameType, runMode, seed, entityName, win, tries, msElapsed, results }) {
-    // Save to DB
-    await recordGame({
-      userId,
-      gameType,
-      runMode,
-      seed,
-      entityName,
-      won: win,
-      tries,
-      msElapsed,
-      rows: results    // array of {green, amber, red} per guess
-    });
-
-    // Build share text + copy (optional)
-    const shareText = buildShare({
-      title: `Whendle — ${entityName}`,
-      tries,
-      won: win,
-      rows: results,
-      url: "https://whendle.org"
-    });
-    try { await navigator.clipboard.writeText(shareText); } catch {}
-  }
-
-  // 3) Call onRoundFinished from YOUR existing finishRound()
-  // Example (tweak names to match your code):
-  // finishRound() {
-  //   const seedNum = Number(`${new Date().getFullYear()}${String(new Date().getMonth()+1).padStart(2,"0")}${String(new Date().getDate()).padStart(2,"0")}`);
-  //   const seed = `${seedNum}|births`; // or |events
-  //   onRoundFinished({
-  //     gameType: 'births',
-  //     runMode: document.getElementById('mode').value === 'Daily' ? 'daily' : 'practice',
-  //     seed,
-  //     entityName: state.person?.name || state.item?.name,
-  //     win: state.win,
-  //     tries: state.guesses.length,
-  //     msElapsed: null,      // wire this up later if you track it
-  //     results: state.results
-  //   });
-  // }
+  window.onRoundFinished = async ({ gameType, runMode, seed, entityName, win, tries, msElapsed, results }) => {
+    await recordGame({ userId, gameType, runMode, seed, entityName, won: win, tries, msElapsed, rows: results });
+    const shareText = buildShare({ title:`Whendle — ${entityName}`, tries, won:win, rows:results, url:"https://whendle.org" });
+    try{ await navigator.clipboard.writeText(shareText); }catch{}
+  };
 </script>
-
 </body>
 </html>
